2025-XX-XX   3.5.2:
-------------------


2025-07-14   3.5.1:
-------------------
  * optimize `util.random_p()` for `n < 100`
  * add [Random Bitarrays](random_p.rst) documentation
  * add [statistical tests for random functions](../examples/test_random.py)


2025-07-06   3.5.0:
-------------------
  * add `util.random_p()`
  * improve sparse compression testing


2025-06-23   3.4.3:
-------------------
  * minor updates to documentation
  * C-level:
      - simplify and speedup `extend_unicode01()`
      - customize `resize_lite()` - avoid unused code
      - use `PyTypeObject` for bitarray type object in `_util.c` to
        be consistent with `_bitarray.c`
      - add and improve comments to implementation of sparse bitarray
        compression
      - simplify `sc_count()`


2025-05-21   3.4.2:
-------------------
  * extend documentation of
    [compression of sparse bitarrays](sparse_compression.rst)
  * `util.sc_decode()` and `util.vl_decode()` now raise `StopIteration`
    instead of `ValueError` when unexpected end of stream is encountered
  * add debug mode tests for `read_n()`, `write_n()` and `count_from_word()`


2025-05-15   3.4.1:
-------------------
  * add `pyproject.toml`, see #233
  * implement `bits2bytes()` in C
  * optimize `delslice()` when `step` is larger than about 5
  * consistently name `*_span()` and `*_range()` in C for
    invert, set and count
  * organize and add tests (including debug mode tests for `zlw()`)


2025-05-06   3.4.0:
-------------------
  * remove `.endian()` method in favor of data descriptor `.endian`
  * allow bitarray initializer `bytes` or `bytearray` to set buffer directly
  * allow calling `.extend()` with `bytes` object (although the only
    valid bytes are 0x00 and 0x01)
  * add `util.byteswap()`
  * add `util.correspond_all()`
  * fix `.reverse()` for imported buffer
  * drop Python 3.5 support
  * add tests


2025-05-02   3.3.2:
-------------------